Change Event Page Layouts

--- a/themes/wishfund-hugo/layouts/event/single.html
+++ b/themes/wishfund-hugo/layouts/event/single.html
@@ -13,13 +13,13 @@
             {{.Content}}
           </div>
           <div class="d-lg-flex justify-content-between align-items-center border-top pt-4 mt-5">
-            <h4>Be a part of noble work</h4>
-            <a href="/donation" class="btn btn-main-2 rounded">Donate Now</a>
+            <h4>Be a part of the class</h4>
+            <a href="/contact" class="btn btn-main-2 rounded">Register Now</a>
           </div>
           <!-- post share -->
           <div class="share-option mt-5 clearfix">
             <ul class="list-inline mb-0">
-              <li class="list-inline-item"> <strong>Share Cause:</strong> </li>
+              <li class="list-inline-item"> <strong>Share Class:</strong> </li>
               {{ range .Site.Params.postShare }}
               <li class="list-inline-item"><a href="{{ .link | safeURL}}" target="_blank"><i class="{{ .icon }} mr-2"></i>{{ .name }}</a></li>
               {{ end }}
