--- a/themes/wishfund-hugo/layouts/volunteer/list.html
+++ b/themes/wishfund-hugo/layouts/volunteer/list.html
@@ -12,7 +12,7 @@
       </div>
       <div class="col-lg-6">
         <span class="text-color mt-5 mt-lg-0">Join With Us</span>
-        <h2 class="mb-5 text-md">Become A Volunteer</h2>
+        <h2 class="mb-5 text-md">Become A Trainer</h2>
         <form action="{{ .Site.Data.homepage.volunteer.form.formAction }}" class="volunteer-form">
           <div class="form-group">
             <input type="text" class="form-control" placeholder="Full Name">
