--- a/themes/wishfund-hugo/layouts/about/list.html
+++ b/themes/wishfund-hugo/layouts/about/list.html
@@ -112,6 +112,8 @@
           <div class="team-item-content">
             <h4 class="mt-3 mb-0 text-capitalize">{{ .name }}</h4>
             <p>{{ .designation }}</p>
+            <br>
+            <p>{{ .bio }}</p>
           </div>
         </div>
       </div>
