--- a/themes/wishfund-hugo/layouts/about/list.html
+++ b/themes/wishfund-hugo/layouts/about/list.html
@@ -114,6 +114,8 @@
             <p>{{ .designation }}</p>
             <br>
             <p>{{ .bio }}</p>
+            <br>
+            <p>{{ .description }}</p>
           </div>
         </div>
       </div>
