--- a/themes/wishfund-hugo/layouts/partials/trainer.html
+++ b/themes/wishfund-hugo/layouts/partials/trainer.html
@@ -1,105 +1,129 @@
-<!-- #######  YAY, I AM THE SOURCE EDITOR! #########-->
-<h1 style="color: #5e9ca0;">You can edit <span style="color: #2b2301;">this demo</span> text!</h1>
-<h2 style="color: #2e6c80;">How to use the editor:</h2>
-<p>Paste your documents in the visual editor on the left or your HTML code in the source editor in the right. <br />Edit any of the two areas and see the other changing in real time.&nbsp;</p>
-<p>Click the <span style="background-color: #2b2301; color: #fff; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;">Clean</span> button to clean your source code.</p>
-<h2 style="color: #2e6c80;">Some useful features:</h2>
-<ol style="list-style: none; font-size: 14px; line-height: 32px; font-weight: bold;">
-<li style="clear: both;"><img style="float: left;" src="https://html-online.com/img/01-interactive-connection.png" alt="interactive connection" width="45" /> Interactive source editor</li>
-<li style="clear: both;"><img style="float: left;" src="https://html-online.com/img/02-html-clean.png" alt="html cleaner" width="45" /> HTML Cleaning</li>
-<li style="clear: both;"><img style="float: left;" src="https://html-online.com/img/03-docs-to-html.png" alt="Word to html" width="45" /> Word to HTML conversion</li>
-<li style="clear: both;"><img style="float: left;" src="https://html-online.com/img/04-replace.png" alt="replace text" width="45" /> Find and Replace</li>
-<li style="clear: both;"><img style="float: left;" src="https://html-online.com/img/05-gibberish.png" alt="gibberish" width="45" /> Lorem-Ipsum generator</li>
-<li style="clear: both;"><img style="float: left;" src="https://html-online.com/img/6-table-div-html.png" alt="html table div" width="45" /> Table to DIV conversion</li>
-</ol>
-<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
-<h2 style="color: #2e6c80;">Cleaning options:</h2>
-<table class="editorDemoTable">
-<thead>
-<tr>
-<td>Name of the feature</td>
-<td>Example</td>
-<td>Default</td>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>Remove tag attributes</td>
-<td><img style="margin: 1px 15px;" src="images/smiley.png" alt="laughing" width="40" height="16" /> (except <strong>img</strong>-<em>src</em> and <strong>a</strong>-<em>href</em>)</td>
-<td>&nbsp;</td>
-</tr>
-<tr>
-<td>Remove inline styles</td>
-<td><span style="color: green; font-size: 13px;">You <strong style="color: blue; text-decoration: underline;">should never</strong>&nbsp;use inline styles!</span></td>
-<td><strong style="font-size: 17px; color: #2b2301;">x</strong></td>
-</tr>
-<tr>
-<td>Remove classes and IDs</td>
-<td><span id="demoId">Use classes to <strong class="demoClass">style everything</strong>.</span></td>
-<td><strong style="font-size: 17px; color: #2b2301;">x</strong></td>
-</tr>
-<tr>
-<td>Remove all tags</td>
-<td>This leaves <strong style="color: blue;">only the plain</strong> <em>text</em>. <img style="margin: 1px;" src="images/smiley.png" alt="laughing" width="16" height="16" /></td>
-<td>&nbsp;</td>
-</tr>
-<tr>
-<td>Remove successive &amp;nbsp;s</td>
-<td>Never use non-breaking spaces&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;to set margins.</td>
-<td><strong style="font-size: 17px; color: #2b2301;">x</strong></td>
-</tr>
-<tr>
-<td>Remove empty tags</td>
-<td>Empty tags should go!</td>
-<td>&nbsp;</td>
-</tr>
-<tr>
-<td>Remove tags with one &amp;nbsp;</td>
-<td>This makes&nbsp;no sense!</td>
-<td><strong style="font-size: 17px; color: #2b2301;">x</strong></td>
-</tr>
-<tr>
-<td>Remove span tags</td>
-<td>Span tags with <span style="color: green; font-size: 13px;">all styles</span></td>
-<td><strong style="font-size: 17px; color: #2b2301;">x</strong></td>
-</tr>
-<tr>
-<td>Remove images</td>
-<td>I am an image: <img src="images/smiley.png" alt="laughing" /></td>
-<td>&nbsp;</td>
-</tr>
-<tr>
-<td>Remove links</td>
-<td><a href="https://html-online.com">This is</a> a link.</td>
-<td>&nbsp;</td>
-</tr>
-<tr>
-<td>Remove tables</td>
-<td>Takes everything out of the table.</td>
-<td>&nbsp;</td>
-</tr>
-<tr>
-<td>Replace table tags with structured divs</td>
-<td>This text is inside a table.</td>
-<td>&nbsp;</td>
-</tr>
-<tr>
-<td>Remove comments</td>
-<td>This is only visible in the source editor <!-- HELLO! --></td>
-<td><strong style="font-size: 17px; color: #2b2301;">x</strong></td>
-</tr>
-<tr>
-<td>Encode special characters</td>
-<td><span style="color: red; font-size: 17px;">&hearts;</span> <strong style="font-size: 20px;">☺ ★</strong> &gt;&lt;</td>
-<td><strong style="font-size: 17px; color: #2b2301;">x</strong></td>
-</tr>
-<tr>
-<td>Set new lines and text indents</td>
-<td>Organize the tags in a nice tree view.</td>
-<td>&nbsp;</td>
-</tr>
-</tbody>
-</table>
-<p><strong>&nbsp;</strong></p>
-<p><strong>Save this link into your bookmarks and share it with your friends. It is all FREE! </strong><br /><strong>Enjoy!</strong></p>
-<p><strong>&nbsp;</strong></p>
+<div class="component heading mb-30">
+    <div class="component-content">
+    <div class="display-2-title text-center field-text">OUR TRAINERS FOLLOW OUR 5 KEY PILLARS OF FITNESS TO GET YOU IN TOP CONDITION</div>
+    <div class="display-2-title text-center field-text">&nbsp;</div>
+    <div class="display-2-title text-center field-text">
+    <table style="width: 654px; margin-left: auto; margin-right: auto; height: 413px;">
+    <tbody>
+    <tr>
+    <td style="width: 210px;"><img class="col-xs-3" style="display: block; margin-left: auto; margin-right: auto;" src="https://www.fitnessfirst.com.my/-/media/project/evolution-wellness/fitness-first/south-east-asia/malaysia/icons/red/yoga_red.svg" alt="Icon" width="200" height="200" /></td>
+    <td style="width: 211px;"><img class="col-xs-3" style="display: block; margin-left: auto; margin-right: auto;" src="https://www.fitnessfirst.com.my/-/media/project/evolution-wellness/fitness-first/south-east-asia/malaysia/icons/red/group-exercise_red.svg" alt="Icon" width="200" height="200" /></td>
+    <td style="width: 211px;"><img class="col-xs-3" style="display: block; margin-left: auto; margin-right: auto;" src="https://www.fitnessfirst.com.my/-/media/project/evolution-wellness/fitness-first/south-east-asia/malaysia/icons/red/pilates_red.svg" alt="Icon" width="200" height="200" /></td>
+    </tr>
+    <tr>
+    <td style="width: 210px;">
+    <h5 class="" style="text-align: center;">Posture</h5>
+    </td>
+    <td style="width: 211px;">
+    <h5 class="" style="text-align: center;">Mobility</h5>
+    </td>
+    <td style="width: 211px;">
+    <h5 class="" style="text-align: center;">Core</h5>
+    </td>
+    </tr>
+    <tr>
+    <td style="width: 210px;">
+    <div class="col-xs-12 col-md-4">
+    <div class="component icon-with-text side-list">
+    <div class="component-content">
+    <div class="three-steps-panel">
+    <div class="content">
+    <div>
+    <p class="" style="text-align: center;">Correcting your posture will reduce stress and strain on your body. You&rsquo;ll&nbsp; stand taller, move better, and feel less fatigue.</p>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    <div class="col-xs-12 col-md-4">&nbsp;</div>
+    </td>
+    <td style="width: 211px;">
+    <div class="col-xs-12 col-md-4">
+    <div class="component icon-with-text side-list">
+    <div class="component-content">
+    <div class="three-steps-panel">
+    <div class="content">
+    <p class="" style="text-align: center;">Good mobility allows your body to move the way it was designed to move &ndash; pain free and with a good range of motion.</p>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    <div class="col-xs-12 col-md-4">&nbsp;</div>
+    </td>
+    <td style="width: 211px;">
+    <div class="row component column-splitter">
+    <div class="col-xs-12 col-md-4">
+    <div class="component icon-with-text side-list">
+    <div class="component-content">
+    <div class="three-steps-panel">
+    <div class="content">
+    <div>
+    <p class="" style="text-align: center;">Your core is part of almost every move you make. Strong core muscles act as a stabilizer, making moving safer and more efficient.</p>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    <div class="row component column-splitter">&nbsp;</div>
+    </td>
+    </tr>
+    </tbody>
+    </table>
+    </div>
+    <div class="display-2-title text-center field-text">&nbsp;</div>
+    <div class="display-2-title text-center field-text">
+    <table style="height: 377px; margin-left: auto; margin-right: auto;" width="658">
+    <tbody>
+    <tr>
+    <td style="width: 318px;"><img class="col-xs-3" style="display: block; margin-left: auto; margin-right: auto;" src="https://www.fitnessfirst.com.my/-/media/project/evolution-wellness/fitness-first/south-east-asia/malaysia/icons/red/free-weights_red.svg" alt="Icon" width="200" height="200" /></td>
+    <td style="width: 324px;"><img class="col-xs-3" style="display: block; margin-left: auto; margin-right: auto;" src="https://www.fitnessfirst.com.my/-/media/project/evolution-wellness/fitness-first/south-east-asia/malaysia/icons/red/exercise-library_red.svg" alt="Icon" width="200" height="200" /></td>
+    </tr>
+    <tr>
+    <td style="width: 318px;">
+    <h5 class="" style="text-align: center;">Strength</h5>
+    </td>
+    <td style="width: 324px;">
+    <h5 class="" style="text-align: center;">Cardio</h5>
+    </td>
+    </tr>
+    <tr>
+    <td style="width: 318px;">
+    <div class="col-xs-12 col-md-4 col-md-offset-2">
+    <div class="component icon-with-text side-list">
+    <div class="component-content">
+    <div class="three-steps-panel">
+    <div class="content">
+    <div>
+    <p class="" style="text-align: center;">Strength training helps you develop strong bones, manage weight and help you do everyday activities better and easier.</p>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    <div class="col-xs-12 col-md-4">&nbsp;</div>
+    </td>
+    <td style="width: 324px; text-align: center;">Improving your cardio will strengthen your stamina and endurance so you can work harder for long and burn more calories.</td>
+    </tr>
+    </tbody>
+    </table>
+    </div>
+    <div class="display-2-title text-center field-text">&nbsp;</div>
+    <div class="display-2-title text-center field-text">&nbsp;</div>
+    </div>
+    </div>
+    <div class="row component column-splitter">
+    <div class="col-xs-12 col-md-4">
+    <div class="component icon-with-text side-list">
+    <div class="component-content">
+    <div class="three-steps-panel">
+    <div class="content">&nbsp;</div>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
